@@ -37,6 +37,7 @@ var encoding = 'utf8';
 var directory = process.cwd();
 var _controller = '';
 var nosql = require('./nosql');
+var regXSS = /[<].*?[>]/g;
 
 require('./prototypes');
 
@@ -601,6 +602,15 @@ Framework.prototype.onRoute = null;
 	return {Boolean or utils.isValid() or StringErrorMessage};
 */
 Framework.prototype.onValidation = null;
+
+/*
+	Validate request data
+	@data {String}
+	return {Boolean}
+*/
+Framework.prototype.onXSS = function(data) {
+	return regXSS.test(data);
+};
 
 /*
 	Render HTML for views
@@ -1797,10 +1807,17 @@ Framework.prototype._request = function(req, res) {
 	else
 		req.ip = req.connection.remoteAddress;
 
-   	if (req.uri.query)
-   		req.data.get = qs.parse(req.uri.query);
+   	if (req.uri.query) {
 
-   	// if static file, return
+		if (self.onXSS !== null && route.flags.indexOf('xss') === -1 && self.onXSS(req.uri.query)) {
+			req.connection.destroy();
+			return;
+		}
+
+   		req.data.get = qs.parse(req.uri.query);
+   	}
+
+   	// if is static file, return file
    	if (utils.isStaticFile(req.uri.pathname)) {
    		
 	    req.on('end', function () {
@@ -1883,9 +1900,19 @@ Framework.prototype._request = function(req, res) {
         		return;
    			}
 
-				internal.parseMULTIPART(req, multipart, route.maximumSize, self.config['directory-temp'], function() {
+   			var fnXSS = function(data) {
+   				return false;
+   			};
+
+   			if (self.onXSS !== null && route.flags.indexOf('xss') === -1) {
+   				fnXSS = function(data) {
+   					return self.onXSS(data);
+   				};
+   			}
+
+			internal.parseMULTIPART(req, multipart, route.maximumSize, self.config['directory-temp'], fnXSS, function() {
 				self.request(req, res, req.flags);
-				});
+			});
 				
 			req.resume();
 			return;
@@ -1900,7 +1927,7 @@ Framework.prototype._request = function(req, res) {
    			}
 
    			// get data from Request BODY, get POST data
-				internal.parsePOST(req, route.maximumSize);
+			internal.parsePOST(req, route.maximumSize);
    		}
    	};
 
@@ -1908,6 +1935,7 @@ Framework.prototype._request = function(req, res) {
 
     	if (!req.buffer.isExceeded && typeof(req.buffer.data) !== 'undefined' && req.buffer.data.length > 0) {
     		var data = req.buffer.data;
+
     		if (route.flags.indexOf('json') !== -1) {
     			try
     			{
@@ -1915,8 +1943,15 @@ Framework.prototype._request = function(req, res) {
     			} catch (err) {
     				self.error(err, 'Framework :: parse POST data', req.uri);
     			}
-    		} else
+    		} else {
+
+	    		if (self.onXSS !== null && route.flags.indexOf('xss') === -1 && self.onXSS(data)) {
+	    			req.connection.destroy();
+	    			return;
+	    		}
+
 				req.data.post = qs.parse(data);
+			}
     	}
 
     	self.request(req, res, flags);
@@ -2484,20 +2519,21 @@ Framework.prototype.routeStaticSync = function(name, directory) {
 	@req {ServerRequest}
 	@res {ServerResponse}
 	@flags {String array}
+	@url {String}
 	return {Framework}
 */
-Framework.prototype.request = function(req, res, flags) {
+Framework.prototype.request = function(req, res, flags, url) {
 	
 	var self = this;
 
 	if (self.onAuthorization === null) {
-		subscribe.init(self, req, res).lookup(req.subdomain, req.buffer.isExceeded ? '#431' : req.uri.pathname, flags);
+		subscribe.init(self, req, res).lookup(req.subdomain, req.buffer.isExceeded ? '#431' : url || req.uri.pathname, flags);
 		return self;
 	}
 
 	self.onAuthorization(req, res, flags, function (isLogged) {
 		flags.push(isLogged ? 'logged' : 'unlogged');
-		subscribe.init(self, req, res).lookup(req.subdomain, req.buffer.isExceeded ? '#431' : req.uri.pathname, flags);
+		subscribe.init(self, req, res).lookup(req.subdomain, req.buffer.isExceeded ? '#431' : url || req.uri.pathname, flags);
 	});
 
 	return self;
