@@ -38,8 +38,8 @@ if (typeof(setImmediate) === 'undefined') {
 	return {String array}
 */
 exports.parsePOST = function(req, maximumSize) {
-	req.setEncoding(encoding);
 	
+	req.setEncoding(encoding);	
 	req.buffer.isData = true;
 	req.buffer.isExceeded = false;
 
@@ -67,10 +67,11 @@ exports.parsePOST = function(req, maximumSize) {
 	@contentType {String}
 	@maximumSize {Number}
 	@tmpDirectory {String}
+	@onXSS {Function}
 	@callback {Function}
 	return {String array}
 */
-exports.parseMULTIPART = function(req, contentType, maximumSize, tmpDirectory, callback) {
+exports.parseMULTIPART = function(req, contentType, maximumSize, tmpDirectory, onXSS, callback) {
   	
   	var parser = new multipart.MultipartParser();
   	var boundary = contentType.split(';')[1];
@@ -80,6 +81,7 @@ exports.parseMULTIPART = function(req, contentType, maximumSize, tmpDirectory, c
   	var tmp = { name: '', value: '', contentType: '', fileName: '', fileNameTmp: '', fileSize: 0, isFile: false, step: 0 };
 	var ip = req.ip.replace(/\./g, '');
 	var close = 0;
+	var isXSS = false;
 
   	boundary = boundary.substring(boundary.indexOf('=') + 1);
   	
@@ -99,6 +101,9 @@ exports.parseMULTIPART = function(req, contentType, maximumSize, tmpDirectory, c
     	
     	if (req.buffer.isExceeded || tmp.step > 1)
     		return;
+
+		if (isXSS)
+			return;
 
     	var arr = buffer.slice(start, end).toString(encoding).split(';');
 
@@ -130,6 +135,9 @@ exports.parseMULTIPART = function(req, contentType, maximumSize, tmpDirectory, c
     parser.onPartData = function(buffer, start, end) {
 
 		if (req.buffer.isExceeded)
+			return;
+
+		if (isXSS)
 			return;
 
 		var data = buffer.slice(start, end);
@@ -167,10 +175,18 @@ exports.parseMULTIPART = function(req, contentType, maximumSize, tmpDirectory, c
     	if (req.buffer.isExceeded)
     		return;
 
-		if (tmp.isFile)
+		if (isXSS)
+			return;
+
+		if (tmp.isFile) {
 			req.data.files.push(new HttpFile(tmp.name, tmp.fileName, tmp.fileNameTmp, tmp.fileSize, tmp.contentType));
-		else
-			req.data.post[tmp.name] = tmp.value;
+			return;
+		}
+
+		if (onXSS(tmp.value))
+			isXSS = true;
+
+		req.data.post[tmp.name] = tmp.value;
     };
 
     parser.onEnd = function() {	
