@@ -1,5 +1,8 @@
 IN DEVELOPMENT ======= 1.2.3-2
 
+- added: auto-detector: potentially dangerous in Request (inspired by the ASP.NET)
+- added: new route flag: "xss"
+
 - updated: nosql (new version, fixed problem with db.remove())
 
 ======= 1.2.3-1
